2011-09-06  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Web Inspector: nuke background events collection (dead feature)
        https://bugs.webkit.org/show_bug.cgi?id=66296

        Reviewed by Yury Semikhatsky.

        * platform/wk2/Skipped: Remove non-existent tests from the Skipped list
        as well.

2011-09-06  Andreas Kling  <kling@webkit.org>

        Unreviewed, removing non-existent test from Qt skiplist.

        * platform/qt/Skipped:

2011-09-06  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][ARM] http/tests/loading/empty-urls.html fails
        https://bugs.webkit.org/show_bug.cgi?id=67638

        [Qt][ARM]fast/dom/call-a-constructor-as-a-function.html fails
        https://bugs.webkit.org/show_bug.cgi?id=67639

        * platform/qt-arm/Skipped: Skip failing tests.

2011-09-06  Rob Buis  <rbuis@rim.com>

        use after free in WebCore::SVGTRefElement::updateReferencedText
        https://bugs.webkit.org/show_bug.cgi?id=67555

        Reviewed by Nikolas Zimmermann.

        Test that cloned tref does not cause a crash.

        * svg/custom/tref-clone-crash-expected.txt: Added.
        * svg/custom/tref-clone-crash.html: Added.

2011-09-06  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][ARM] Missing WebGLContextEvent window property
        https://bugs.webkit.org/show_bug.cgi?id=67637

        * platform/qt-arm/fast/dom/Window/window-property-descriptors-expected.txt: Added.

2011-09-06  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r94560.
        http://trac.webkit.org/changeset/94560
        https://bugs.webkit.org/show_bug.cgi?id=67636

        It made inspector/debugger/script-formatter.html flakey
        (Requested by Ossy on #webkit).

        * inspector/debugger/content-providers-expected.txt:
        * inspector/debugger/content-providers.html:
        * inspector/debugger/scripts-panel.html:
        * inspector/debugger/source-frame-count.html:
