@@ -1,28 +1,0 @@
-<svg onload="runTest()">
-  <defs>
-    <style id="style"/>
-    <text id="ref"></text>
-  </defs>
-  <g><use xlink:href="#ref"/></g>
-  <g><text><tref id="tref" xlink:href="#ref"/></text></g>
-  <script>
-    if (window.layoutTestController) {
-      layoutTestController.dumpAsText();
-      layoutTestController.waitUntilDone();
-    }
-    function runTest() {
-      var tref = document.getElementById("tref");
-      tref.cloneNode(true);
-      window.setTimeout("finishTest()", 500);
-    }
-    function finishTest() {
-      var elem = document.getElementById("style");
-      var parent = elem.parentNode;
-      // trigger tref event listeners
-      parent.insertBefore(document.createElement("source"), elem);
-      document.body.innerHTML = "PASS";
-      if (window.layoutTestController)
-        layoutTestController.notifyDone();
-    }
-  </script>
-</svg>
